--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Fastify AMQP connection plugin, to use with RabbitMQ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "standard",
+    "test": "tap test.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,18 @@
   },
   "homepage": "https://github.com/RafaelGSS/fastify-amqp#readme",
   "dependencies": {
+    "amqplib": "^0.5.3",
     "fastify-plugin": "^1.6.0"
-  }
+  },
+  "devDependencies": {
+    "fastify": "^2.5.0",
+    "pre-commit": "^1.2.2",
+    "standard": "^12.0.1",
+    "tap": "^14.2.5",
+    "typescript": "^3.5.2"
+  },
+  "pre-commit": [
+    "lint",
+    "test"
+  ]
 }
