chore(travis): Adjust travis to run test

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: node_js
 
 node_js:
-  - "11"
   - "10"
-  - "8"
-  - "6"
 
 services:
   - rabbitmq
+
+script:
+  - npm run test
 
 notifications:
   email:
