--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "lint": "standard",
-    "test": "tap test.js"
+    "test": "npm run unit && npm run typescript",
+    "unit": "tap test.js",
+    "typescript": "tsd"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
     "pre-commit": "^1.2.2",
     "standard": "^12.0.1",
     "tap": "^14.2.5",
+    "tsd": "^0.13.1",
     "typescript": "^3.5.2"
   },
   "pre-commit": [
