--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ jobs:
 
     strategy:
       matrix:
-        node: [10, 12, 14]
+        node: [10]
 
     name: Node.js ${{ matrix.node }}
 
     services:
-      mongodb:
+      rabbitmq:
         image: rabbitmq:3.4.3
         ports:
           - 5672:5672
